カードとコミュニティで永続化するフィールドの拡張，アップデート処理 (#126)
* カードとコミュニティで永続化するフィールドの拡張，アップデート処理

* Update schema

---------
